Changelog
=========


1.8.1 (unreleased)
------------------

- Fix sync_contacts entry point to handle parameters with spaces correctly.
  [buchi]


1.8.0 (2015-12-23)
------------------

- Restrict versions of some dependencies so they don't pull in Plone 5.
  [mbaechtold]

- Add functionality to toggle showing memberships with the new
  show_memberships attribute.
  [elioschmutz]

- Add support for synchronization of contacts from LDAP
  [buchi]

- Point the link of the contact memberships to the parent object, i.e.
  the object where the member is assigned to.
  [mbaechtold]

- No longer use the deprecated "simplelayout.types.common". Use
  "ftw.contentpage" instead.
  [mbaechtold]


1.7.2 (2015-09-23)
------------------

- Make complete Address a single entry so it can be copied.
  [tschanzt]


1.7.1 (2015-08-11)
------------------

- Added vCard download.
  [lknoepfel]


1.7.0 (2015-05-26)
------------------

- Added zip-export integration.
  [lknoepfel]


1.6.3 (2014-12-11)
------------------

- Disable orphan feature.
  [mbaechtold]


1.6.2 (2014-07-11)
------------------

- Fix memberblock width if the referenced contact name is too long.
  [elioschmutz]


1.6.1 (2014-03-25)
------------------

- Remove ManagePortal-permission for language field for a contact-object.
  [elioschmutz]


1.6 (2013-12-13)
----------------

- Change image caption name format (memberblock).
  [mathias.leimgruber]

- Improve Widget for Selection when there are multiple persons with the same name.
  [tschanzt]

- Use UID for searching References. IDs can be used multiple times.
  [tschanzt]

1.5.4 (2013-09-02)
------------------

- Wrap div around memberships in contact view.
  [Julian Infanger]


1.5.3 (2013-05-24)
------------------

- Nothing changed yet.


1.5.2 (2013-05-07)
------------------

- Fixed contact_listing_view template.
  [misch]


1.5.1 (2013-04-23)
------------------

- Added missing translation.
  [Julian Infanger]


1.5 (2013-04-02)
----------------
